IGNITE-17941 Add learners to Raft API