@@ -40,7 +40,6 @@ import static org.apache.ignite.raft.jraft.rpc.CliRequests.TransferLeaderRequest
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionException;
@@ -62,7 +61,6 @@ import org.apache.ignite.network.NetworkAddress;
 import org.apache.ignite.network.NetworkMessage;
 import org.apache.ignite.raft.client.Command;
 import org.apache.ignite.raft.client.Peer;
-import org.apache.ignite.raft.client.ReadCommand;
 import org.apache.ignite.raft.client.service.RaftGroupService;
 import org.apache.ignite.raft.jraft.RaftMessagesFactory;
 import org.apache.ignite.raft.jraft.entity.PeerId;
@@ -130,13 +128,14 @@ public class RaftGroupServiceImpl implements RaftGroupService {
         int timeout,
         int rpcTimeout,
         List<Peer> peers,
+        List<Peer> learners,
         Peer leader,
         long retryDelay,
         ScheduledExecutorService executor
     ) {
         this.cluster = requireNonNull(cluster);
-        this.peers = requireNonNull(peers);
-        this.learners = Collections.emptyList();
+        this.peers = List.copyOf(peers);
+        this.learners = List.copyOf(learners);
         this.factory = factory;
         this.timeout = timeout;
         this.rpcTimeout = rpcTimeout;
@@ -167,11 +166,12 @@ public class RaftGroupServiceImpl implements RaftGroupService {
         int timeout,
         int rpcTimeout,
         List<Peer> peers,
+        List<Peer> learners,
         boolean getLeader,
         long retryDelay,
         ScheduledExecutorService executor
     ) {
-        var service = new RaftGroupServiceImpl(groupId, cluster, factory, timeout, rpcTimeout, peers, null, retryDelay, executor);
+        var service = new RaftGroupServiceImpl(groupId, cluster, factory, timeout, rpcTimeout, peers, learners, null, retryDelay, executor);
 
         if (!getLeader)
             return CompletableFuture.completedFuture(service);
@@ -215,7 +215,7 @@ public class RaftGroupServiceImpl implements RaftGroupService {
         long retryDelay,
         ScheduledExecutorService executor
     ) {
-        return start(groupId, cluster, factory, timeout, timeout, peers, getLeader, retryDelay, executor);
+        return start(groupId, cluster, factory, timeout, timeout, peers, List.of(), getLeader, retryDelay, executor);
     }
 
     /** {@inheritDoc} */
@@ -518,16 +518,6 @@ public class RaftGroupServiceImpl implements RaftGroupService {
         sendWithRetry(leader, req, currentTimeMillis() + timeout, fut);
 
         return fut.thenApply(resp -> (R) resp.result());
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override public <R> CompletableFuture<R> run(Peer peer, ReadCommand cmd) {
-        ActionRequest req = factory.actionRequest().command(cmd).groupId(groupId).readOnlySafe(false).build();
-
-        return cluster.messagingService().invoke(peer.address(), req, rpcTimeout)
-                .thenApply(resp -> (R) ((ActionResponse) resp).result());
     }
 
     /** {@inheritDoc} */
